Testing of new mining block method